# p2p-games

./: .gitignore  Cargo.toml
app-cli/: Cargo.toml
app-cli/src/: main.rs
p2p-core/: Cargo.toml
p2p-core/src/: discovery.rs  lib.rs  protocol.rs  registry.rs  session.rs
transport-iroh/: Cargo.toml
transport-iroh/src/: lib.rs  transport_iroh.rs
