[package]
name = "p2p-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = "4.5.48"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = "1.47.1"
uuid = "1.18.1"
transport-iroh = { path = "../transport-iroh" }
