[package]
name = "transport-iroh"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
blake3 = "1.8.2"
bytes = "1.10.1"
futures-util = "0.3.31"
hex = "0.4.3"
iroh = "0.92.0"
iroh-gossip = "0.92.0"
rand = "0.8.5"
rand_core = "0.6.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
